--- a/roles/fzf/tasks/main.yml
+++ b/roles/fzf/tasks/main.yml
@@ -6,3 +6,9 @@
   ansible.builtin.import_tasks: arch.yml
   when: ansible_os_family == 'Archlinux'
 
+- name: "fzf | Install fzf-git"
+  ansible.builtin.git:
+    repo: https://github.com/junegunn/fzf-git.sh.git
+    depth: 1
+    dest: "{{ ansible_env.HOME }}/.fzf-git"
+
