change fullscreen command so i can use emacs bash keybindings

--- a/roles/glzr/files/.glzr/glazewm/config.yaml
+++ b/roles/glzr/files/.glzr/glazewm/config.yaml
@@ -181,7 +181,7 @@ keybindings:
 
   # Change the focused window to be fullscreen.
   - commands: ['toggle-fullscreen']
-    bindings: ['alt+f']
+    bindings: ['alt+shift+f']
 
   # Minimize focused window.
   - commands: ['toggle-minimized']
