--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -26,3 +26,16 @@
     name: inter-font
     state: present
 
+- name: "Fonts | Delete fontconfig if it exists"
+  ansible.builtin.file:
+    path: "{{ ansible_user_dir }}/.config/fontconfig"
+    state: absent
+
+- name: "Fonts | Configure fonts"
+  ansible.builtin.file:
+    src: "{{ playbook_dir }}/roles/fonts/files/fontconfig"
+    dest: "{{ ansible_user_dir }}/.config/fontconfig"
+    state: link
+
+
+
