--- a/roles/1password/tasks/main.yml
+++ b/roles/1password/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: "1password | Install postman on Arch"
+- name: "1password | Install 1password on Arch"
   ansible.builtin.shell: "yay -S 1password --noconfirm"
   when: ("yay-bin" in ansible_facts.packages) and ("1password" not in ansible_facts.packages)
 
