--- a/roles/bat/tasks/main.yml
+++ b/roles/bat/tasks/main.yml
@@ -18,5 +18,6 @@
     dest: "{{ ansible_user_dir }}/.config/bat/themes/Catppuccin-Mocha.tmTheme"
 
 - name: "Bat | Reload themes cache"
-  ansible.builtin.shell: "bat cache --build"
+  ansible.builtin.shell: >
+    bat cache --build
 
